--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 /* Fonts */
-@import url("/assets/font/NotoKufiArabic.css");
+@import url("/assets/fonts/ibmplexsansarabic/ibmplexsansarabic.css");
 
 /* Global Rules */
 :root {
@@ -19,7 +19,11 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: "Noto Kufi Arabic";
+  font-family: "IBMPlexSansArabic";
+}
+
+html {
+  direction: rtl;
 }
 
 body {
@@ -31,3 +35,52 @@ body {
   width: 100%;
   height: 100svh;
 }
+
+a {
+  text-decoration: none;
+  color: var(--b-500);
+}
+
+/* container start */
+.container {
+  width: 100%;
+  max-width: 1140px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+/* container end */
+
+/* header start */
+.header {
+  max-width: 100%;
+  .headerContent {
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* navbar start */
+    .navbar {
+      .navLinks {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        .navLink {
+          font-size: 20px;
+          font-weight: 500;
+          color: var(--dark);
+          opacity: 0.5;
+          transition: 0.3s linear opacity, 0.3s linear color;
+          &:hover {
+            color: var(--b-500);
+            opacity: 1;
+          }
+        }
+      }
+    }
+    /* navbar end */
+  }
+}
+/* header end */
