solve css assigns lesson-from-22-to-26

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@
   --b-500: #5271ff;
   --b-300: #869cff;
   --b-200: #bac6ff;
-  --b-100: #eef1ff;
+  --b-100: #f0f8ff;
   --light: #fff;
   --dark: #123;
 }
